exercise_2.06/manifests/service.ping-pong-app.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: log-ping-pong
  name: ping-pong-svc
spec:
  type: ClusterIP
  selector:
    app: ping-pong
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
